Add admin user directory
